--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,43 @@
   <head>
     <title>Let's Go API</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <style>
-      body {
-        padding: 16px;
-      }
-    </style>
   </head>
 
   <body>
-    <h1>Let's Go API</h1>
-    <h2>Documentation</h2>
+    <div class="container-fluid">
+      <h1>Let's Go API</h1>
+      <h2>Documentation</h2>
 
-    <p>Coming Soon</p>
+      For better documentation see the
+      <a href="https://github.com/duncangrubbs/lets-go-api/wiki/API-Documentation">wiki.</a>
+
+      <h4>GET Endpoints</h4>
+      <ul>
+        <li><code>GET /api/v0/events/attendees/:id</code></li>
+        <li><code>GET /api/v0/events/nearby/:lat/:long/:radius</code></li>
+        <li><code>GET /api/v0/events/public/:page</code></li>
+        <li><code>GET /api/v0/events/search/:query</code></li>
+      </ul>
+
+      <h4>POST Endpoints</h4>
+      <ul>
+        <li><code>POST /api/v0/auth/login</code></li>
+        <li><code>POST /api/v0/auth/signup</code></li>
+        <li><code>POST/api/v0/events/create-event</code></li>
+      </ul>
+
+      <h4>PUT Endpoints</h4>
+      <ul>
+        <li><code>PUT /api/v0/auth/update</code></li>
+        <li><code>PUT /api/v0/events/attend</code></li>
+        <li><code>PUT /api/v0/events/edit</code></li>
+      </ul>
+
+      <h4>DELETE Endpoints</h4>
+      <ul>
+        <li><code>DELETE /api/v0/events</code></li>
+      </ul>
+    </div>
   </body>
 
 </html>
